--- a/assets/styles/components/_search-form.scss
+++ b/assets/styles/components/_search-form.scss
@@ -1,9 +1,10 @@
 .search-form {
   width: 100%;
   display: flex;
+  height: $baseline*2/3;
   align-items: flex-start;
-  height: 1.6rem;
-  line-height: 1.6rem;
+  //height: 1.6rem;
+  //line-height: 1.6rem;
 }
 
 .search-form__label {
@@ -11,23 +12,18 @@
 
 .search-form__field {
   border: 0;
-  //-webkit-appearance: none;
-  //-moz-appearance: none;
-  //font-family: $font-family-sans-serif;
-  //font-size: ms(-2);
-  line-height: 1.6rem;
-  //font-weight: bold;
-  //color: $font-color;
-  //text-transform: uppercase;
-  height: 1.6rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   min-height: 100%;
   max-height: 100%;
-  //box-sizing: content-box;
   flex: 1;
   width: auto;
   min-width: $baseline;
   display: block;
   @include link-nav;
+  line-height: $baseline*2/3;
+  vertical-align: top;
+  padding: 0;
 }
 
 .search-form__submit {
